--- a/src/app/component/filter/filter-selection.component.html
+++ b/src/app/component/filter/filter-selection.component.html
@@ -1,3 +1,13 @@
+<div *ngIf="dialog && isLoading">
+  <div class="loading__container">
+    <div class="loading__circle loading__circle-1"></div>
+    <div class="loading__circle loading__circle-2"></div>
+    <div class="loading__circle loading__circle-3"></div>
+    <div class="loading__circle loading__circle-4"></div>
+    <div class="loading__circle loading__circle-5"></div>
+  </div>
+</div>
+
 <div *ngIf="dialog && !isLoading">
   <div class="dialog dialog__close">
     <i class="fa fa-times-circle" (click)="dialog.close()"></i>
