--- a/src/styles/controls.scss
+++ b/src/styles/controls.scss
@@ -10,6 +10,7 @@ button {
   transition: background-color 200ms linear;
   outline: 0;
   padding: 0.5em;
+  z-index: 1;
 }
 
 button:hover {
@@ -31,6 +32,7 @@ button:hover {
   outline: 0;
   padding: 0.5em;
   text-decoration: none;
+  z-index: 1;
 
   &--highlighted {
     border: 1px solid $container-background-color;
