- added optional information "productCondition" to price

--- a/src/app/component/product-view/single-product-view.component.html
+++ b/src/app/component/product-view/single-product-view.component.html
@@ -46,6 +46,9 @@
                 <div>
                   {{getShopNameFromUrl(itemWithLowestPrice?.link)}}:<span *ngIf="renderPrice(itemWithLowestPrice)" class="productInformation__offer--price">{{renderPrice(itemWithLowestPrice)}}</span>
                 </div>
+                <div *ngIf="itemWithLowestPrice?.productCondition">
+                  {{itemWithLowestPrice?.productCondition}}
+                </div>
                 <div *ngIf="itemWithLowestPrice?.updatedOn" class="productInformation__offer--updatedOn">
                   aktualisiert am:
                   {{itemWithLowestPrice?.updatedOn | date:'dd.MM.yyyy' }}
@@ -62,7 +65,10 @@
               <a *ngFor="let offer of moreExpensiveOfferItems" href="{{offer?.link}}" (click)="pickedOffer()" target="_blank" class="button__wrapper">
                 <div class="button productInformation__offer">
                   <div>
-                  {{getShopNameFromUrl(offer?.link)}}: <span *ngIf="renderPrice(offer)" class="productInformation__offer--price">{{renderPrice(offer)}}</span>
+                    {{getShopNameFromUrl(offer?.link)}}: <span *ngIf="renderPrice(offer)" class="productInformation__offer--price">{{renderPrice(offer)}}</span>
+                  </div>
+                  <div *ngIf="offer?.productCondition">
+                    {{offer?.productCondition}}
                   </div>
                   <div *ngIf="offer?.updatedOn" class="productInformation__offer--updatedOn">
                     {{ 'UPDATED_ON' | translate }}:
