--- a/src/app/component/filter/filter-selection.component.html
+++ b/src/app/component/filter/filter-selection.component.html
@@ -1,11 +1,5 @@
 <div *ngIf="dialog && isLoading">
-  <div class="loading__container">
-    <div class="loading__circle loading__circle-1"></div>
-    <div class="loading__circle loading__circle-2"></div>
-    <div class="loading__circle loading__circle-3"></div>
-    <div class="loading__circle loading__circle-4"></div>
-    <div class="loading__circle loading__circle-5"></div>
-  </div>
+  <app-loading></app-loading>
 </div>
 
 <div *ngIf="dialog && !isLoading">
