--- a/src/app/component/product-view/single-product-view.component.scss
+++ b/src/app/component/product-view/single-product-view.component.scss
@@ -37,6 +37,8 @@
   }
 
   &__mainImage {
+    -khtml-user-select: default;
+    -webkit-touch-callout: default;
     max-height: 20em;
     max-width: 20em;
 
