- new startpage structure

--- a/src/app/component/item/item.component.html
+++ b/src/app/component/item/item.component.html
@@ -1,9 +1,9 @@
 <div>
-  <div *ngIf="item" [ngClass]="['informationItem', item.itemId ? '' : 'informationItem--loading', cssModifier ? 'informationItem' + cssModifier : '', additionalCssClasses]">
+  <div *ngIf="item" [ngClass]="['informationItem', item.itemId ? '' : 'informationItem--loading', showBig ? 'informationItem--big' : '', cssModifier ? 'informationItem' + cssModifier : '', additionalCssClasses]">
     <div [ngClass]="['informationItem__imageContainer', cssModifier ? 'informationItem__imageContainer' + cssModifier : '', item.itemId ? '' : 'informationItem__imageContainer--loading']">
       <a href="{{itemUrl}}" (click)="pickedInformation(item)">
         <img *ngIf="item.itemId"
-          class="informationItem__image{{cssModifier ? ' informationItem__image' + cssModifier : ''}}"
+          class="informationItem__image{{showBig ? ' informationItem__image--big' : ''}}{{cssModifier ? ' informationItem__image' + cssModifier : ''}}"
           alt="{{'IMAGE_OF' | translate }} {{item.title}}"
           src="{{item.titleImage}}"
           loading="lazy"
@@ -17,7 +17,7 @@
         <div *ngIf="showPrice">
           <div *ngIf="renderLowestPrice(item); else noPrice" [ngClass]="['button', 'informationItem__priceWrapper']">
             {{ 'PRICE_FROM' | translate }}
-            <span class="informationItem__price">&nbsp;{{renderLowestPrice(item) || ''}}</span>
+            <span class="informationItem__price{{showBig ? ' informationItem__price--big' : ''}}">&nbsp;{{renderLowestPrice(item) || ''}}</span>
           </div>
           <ng-template #noPrice>
             <div [ngClass]="['informationItem__price', 'informationItem__price--hidden']">
