--- a/src/app/component/landing-pages/moderated-teaser.component.scss
+++ b/src/app/component/landing-pages/moderated-teaser.component.scss
@@ -24,7 +24,7 @@
 
   &__more {
     color: $content-color;
-    font-size: 0.8em;
+    font-size: 90%;
     font-weight: normal;
     padding-left: 1em;
     text-decoration: underline;
