- startpage content is now loaded, when in view

--- a/src/app/component/landing-pages/moderated-teaser.component.html
+++ b/src/app/component/landing-pages/moderated-teaser.component.html
@@ -1,4 +1,4 @@
-<section class="informationItems__containerWrapper{{headerTitle ? ' informationItems__containerWrapper--topGap' : ''}}">
+<section #teaserSection class="informationItems__containerWrapper{{headerTitle ? ' informationItems__containerWrapper--topGap' : ''}}">
   <a href="{{linkUri}}">
     <div class="col-12 header header__title" *ngIf="headerTitle">
       {{headerTitle | translate}} <span class="header__more">mehr &raquo;</span>
