--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -25,6 +25,7 @@
 
   &__buttonWrapper {
     display: inline-flex;
+    margin-bottom: 1em;
     margin-top: 1em;
     justify-content: center;
   }
