- introduced carousel for categories

--- a/src/app/component/item/item.component.scss
+++ b/src/app/component/item/item.component.scss
@@ -171,7 +171,9 @@
     z-index: 3;
 
     &--big {
-      right: -4.5em;
+      @media screen and (min-width: 576px) {
+        right: -4.5em;
+      }
     }
   }
 
