--- a/src/app/component/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/component/breadcrumbs/breadcrumbs.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-12 breadcrumbs">
     <div *ngFor="let navigationId of navigationIds; let ix=index">
-      <span *ngIf="ix > 0">&raquo;&nbsp;</span>
-      <a href="{{getUriOfNavigationId(navigationId)}}" class="breadcrumbs__item">{{ 'NAVIGATION_' + navigationId | translate }}</a>
+      <span *ngIf="ix > 0" class="{{breadcrumbItemModifier}}">&raquo;&nbsp;</span>
+      <a href="{{getUriOfNavigationId(navigationId)}}" class="breadcrumbs__item{{breadcrumbItemModifier}}">{{ 'NAVIGATION_' + navigationId | translate }}</a>
     </div>
   </div>
 </div>
