- fixed categories and breadcrumbs

--- a/src/app/component/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/component/breadcrumbs/breadcrumbs.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="showBreadcrumbs">
   <div class="col-12 breadcrumbs">
     <div *ngFor="let navigationId of navigationIds; let ix=index">
       <span *ngIf="ix > 0" class="{{breadcrumbItemModifier}}">&raquo;&nbsp;</span>
