- single provider is now shown in item - fixed link target bug

--- a/src/app/component/item/item.component.html
+++ b/src/app/component/item/item.component.html
@@ -29,6 +29,9 @@
       </div>
     </a>
 
+    <a href="{{itemUrl}}" class="informationItem--link" *ngIf="showOfferDetailsLink" (click)="pickedInformation(item)" target="{{linkTarget}}">
+      <span>{{getShopNameOfItem()}}</span>
+    </a>
     <a href="{{singleProductViewUrl}}" class="informationItem__details--link" *ngIf="showOfferDetailsLink" (click)="pickedInformation(item)">
       <div>{{ 'OFFER_DETAILS' | translate }}</div>
     </a>
