--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,6 +1,7 @@
 $container-background-color: rgb(255, 255, 255);
 $container-background-color-as-rgba: rgba(255, 255, 255, 0.85);
 $container-color: #122947;
+$container-hint-background-color: orange;
 $content-color: #122947;
 $content-color--active: #DE5935;
 $font-family: Roboto, sans-serif;
