- added missing translation - updated startpage topics

--- a/src/app/component/overview/items.component.html
+++ b/src/app/component/overview/items.component.html
@@ -30,8 +30,7 @@
 
   <div *ngIf="noResults" class="container">
     <div class="col-12 noResults__container">
-      Deine Suche hat leider keinen Treffer ergeben.
-      Lass' dich von ein paar unserer anderen Produkte inspirieren!
+      {{ 'NO_PRODUCTS_FOUND' | translate }}
     </div>
   </div>
 
