--- a/src/app/component/landing-pages/start-page.component.html
+++ b/src/app/component/landing-pages/start-page.component.html
@@ -9,6 +9,7 @@
   </a>
 
   <div class="container">
+    TEASERS: {{STARTPAGE_TEASER_ITEMS.length}}
     <moderated-teaser
       *ngFor="let teaserItem of STARTPAGE_TEASER_ITEMS"
       [filters]="teaserItem.filters"
