--- a/src/app/component/item/item.component.html
+++ b/src/app/component/item/item.component.html
@@ -1,4 +1,4 @@
-<div>
+<div #itemSection>
   <div *ngIf="item" [ngClass]="['informationItem', item.itemId ? '' : 'informationItem--loading', showBig ? 'informationItem--big' : '', cssModifier ? 'informationItem' + cssModifier : '', additionalCssClasses]">
     <div [ngClass]="['informationItem__imageContainer', cssModifier ? 'informationItem__imageContainer' + cssModifier : '', item.itemId ? '' : 'informationItem__imageContainer--loading']">
       <a href="{{itemUrl}}" class="informationItem--link" (click)="pickedInformation(item)" target="{{linkTarget}}">
@@ -6,8 +6,7 @@
              class="informationItem__image{{showBig ? ' informationItem__image--big' : ''}}{{cssModifier ? ' informationItem__image' + cssModifier : ''}}"
              alt="{{'IMAGE_OF' | translate }} {{item.title}}"
              [src]="showAlternateImage ? imageUrl : item.titleImage || ''"
-             (mouseenter)="imageUrl = secondaryImageUrl"
-             (mouseleave)="imageUrl = primaryImageUrl"
+             (mouseenter)="imageUrl = item.titleImage || ''"
              loading="lazy"
         />
         <div class="informationItem__stamp{{showBig ? ' informationItem__stamp--big' : ''}}" *ngIf="renderedReduction">{{renderedReduction}}</div>
